force-app/main/default/objects/df_54_prrende_begge_personer__c/df_54_prrende_begge_personer__c.object-meta.xml
<CustomObject>
    <label>Pårørende</label>
    <nameField>
        <label>Pårørende Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pårørendes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>