force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/efternavn_prrende__c.field-meta.xml
<CustomField>
    <fullName>efternavn_prrende__c</fullName>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>