force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/email_prrende__c.field-meta.xml
<CustomField>
    <fullName>email_prrende__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>