force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/fornavn_prrende__c.field-meta.xml
<CustomField>
    <fullName>fornavn_prrende__c</fullName>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>