force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/hvem_er_denne_person_prrende_for__c.field-meta.xml
<CustomField>
    <fullName>hvem_er_denne_person_prrende_for__c</fullName>
    <label>Hvem er denne person pårørende f 0093f</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>prrende_for_person1</fullName>
                <label>{person_1_first_name} {person_1_last_name}</label>
            </value>
            <value>
                <fullName>prrende_for_person2</fullName>
                <label>{person_2_first_name} {person_2_last_name}</label>
            </value>
            <value>
                <fullName>prrende_begge</fullName>
                <label>Begge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>