force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/journal_dk__c.field-meta.xml
<CustomField>
    <fullName>journal_dk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>journal_dk</label>
    <referenceTo>df_journal_dk__c</referenceTo>
    <relationshipLabel>Pårørende</relationshipLabel>
    <relationshipName>df_54_prrende_begge_personer</relationshipName>
    <type>Lookup</type>
</CustomField>