force-app/main/default/objects/df_54_prrende_begge_personer__c/fields/telefonnummer_prrende__c.field-meta.xml
<CustomField>
    <fullName>telefonnummer_prrende__c</fullName>
    <label>Telefonnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>